# words-of-wisdom-gacha

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/examples/: quick_dev.rs
backend/src/: config.rs  error.rs  main.rs  migrations.rs
backend/src/_dev_utils/: dev_db.rs  mod.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/ctx/: error.rs  mod.rs
backend/src/model/: collection.rs  error.rs  exec_helper.rs  fortune.rs  mod.rs  store.rs
backend/src/utils/: extractor.rs  mod.rs
backend/src/web/: error.rs  mod.rs  mw_context.rs  response_mapper.rs  routes_collections.rs  routes_fortune.rs  routes_login.rs
config/: wow-proxy.conf
container-data/migrations/initial/: 01-create-schema.sql  02-insert-data.sql
frontend/: .gitignore  Dockerfile  app.config.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
frontend/src/: app.css  app.tsx  entry-server.tsx  environments.ts  middleware.ts
frontend/src/component/: ButtonWrapper.tsx  Card.tsx  CenterDiv.tsx  Combox.tsx  ErrorPage.tsx  FortuneTellerDialog.tsx  FullHeightMain.tsx  FullWidthDiv.tsx  SelectWrapper.tsx  TextFieldWithGrid.tsx  TextFieldWrapper.tsx  style.css
frontend/src/context/: DashboardContext.tsx  DialogContext.tsx  FilterContext.tsx
frontend/src/lib/: api-server_url.ts  collection-data.ts  error.ts  fortune-data.ts  login.ts  session.ts  types.ts
frontend/src/routes/: admin.tsx  health.tsx  index.tsx
nginx/: Dockerfile  nginx.conf
tools/gen_key/: Cargo.toml
(+17 files in other folders)
