[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.30", features = ["full"] }
sqids = "0.4.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
axum-extra = { version = "0.9", features = ["cookie"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum_macros = "0.25"

# -- Other
rand = "0.8"
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
time = "0.3.36"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "3"
reqwest = "0.12"


[[bin]]
path = "src/main.rs"
name = "wowg-server"